Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25272

Wrong function name in error messages upon ST_GeomFromGeoJSON call

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Trivial
    • Resolution: Fixed
    • 10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6
    • 10.2.38, 10.3.29, 10.4.19, 10.5.10
    • GIS
    • None

    Description

      This is a literal quote from gis-json.result:

      10.2 da26e2e673

      SELECT ST_AsText(SELECT ST_AsText(ST_GeomFromGeoJSON('{ "type": "Point", "coordinates": [5.3, 15.0, 4.3]}',5));
      ERROR HY000: Incorrect option value: '5' for function ST_GeometryFromJSON
      SELECT ST_AsText(ST_GeomFromGeoJSON('{ "type": "Point", "coordinates": [5.3, 15.0, 4.3]}',1));
      ERROR 22023: Invalid GIS data provided to function ST_GeometryFromJSON.
      ('{ "type": "Point", "coordinates": [5.3, 15.0, 4.3]}',5));
      ERROR HY000: Incorrect option value: '5' for function ST_GeometryFromJSON
      SELECT ST_AsText(ST_GeomFromGeoJSON('{ "type": "Point", "coordinates": [5.3, 15.0, 4.3]}',1));
      ERROR 22023: Invalid GIS data provided to function ST_GeometryFromJSON.
      

      So, the function name is ST_GeomFromGeoJSON, but the error messages say ST_GeometryFromJSON instead. And it is not even a synonym:

      MariaDB [test]> SELECT ST_GeometryFromJSON('{}',1);
      ERROR 1305 (42000): FUNCTION test.ST_GeometryFromJSON does not exist
      

      Attachments

        Activity

          People

            anel Anel Husakovic
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.