MDEV-25272: Wrong function name in error messages upon ST_GeomFromGeoJSON call

- Invalid function name during ER_WRONG_VALUE_FOR_TYPE and ER_GIS_INVALID_DATA